Fixed the image to 100% on mobile

--- a/less/global.less
+++ b/less/global.less
@@ -37,7 +37,7 @@ p {
 
 img {
   max-width: 100%;
-  height: auto;
+  
 }
 
 .container {
