--- a/less/index.less
+++ b/less/index.less
@@ -18,23 +18,7 @@
   }
 }
 
-.first-contain {
-    display:flex;
-    flex-wrap:wrap;
-    justify-content:center;
-    border-top:1px dotted black; 
-    .about{
-        margin-left:10px;
-        margin-right:10px;
-    }
-   
-    img{
-        @media @phone{
-        width:100%;
-    }
-  
-    }
-    }
+
 
 
 
