--- a/less/mixins.less
+++ b/less/mixins.less
@@ -9,5 +9,14 @@
     border-radius: 30px;
     width:@width;
     font-size:2rem;
-    color:@font; 
+    color:@font;
+    cursor:pointer; 
+}
+
+.header {
+    padding: 15px;
+}
+
+.img{
+  border-radius: 100%;
 }
