--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,25 +1,22 @@
-// Navigation Styles here
-
 header{
-    border-bottom: 1px solid black;
-     display:flex;
-     justify-content: space-evenly;
-     padding-top:20px;
-    text-align: center;
- 
-    nav{
-      justify-content:space-evenly;
+  display:flex;
+justify-content:center;
+  flex-direction:row;
+  flex-wrap:wrap;
 
-      a{
-          margin-left:20px;
-          font-size:20px;  
-      }
+
+  nav{
+    display:flex;
+    
+    margin:10px 0;
+    padding:10px;
+    a{
+      margin-left:5%;
+      color:#1d205a;
+      text-decoration:none;
+      margin-left:30px;
+      font-size:20px;
 
     }
-@media @phone {
-    flex-direction: column;
-    align-items: center;
-    
   }
-
 }
